[gd_scene load_steps=7 format=3 uid="uid://cbf6bskwccct6"]

[ext_resource type="Environment" uid="uid://d1ty7nclodqkb" path="res://graphics/low/environment.tres" id="1_2lbcy"]
[ext_resource type="Script" path="res://directional_light_3d.gd" id="1_snt3v"]
[ext_resource type="ArrayMesh" uid="uid://cuyumuig5vmo" path="res://linux.obj" id="3_1arkc"]

[sub_resource type="SphereMesh" id="SphereMesh_bgycj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yi6xm"]
metallic = 1.0
metallic_specular = 1.0
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7sm5d"]
albedo_color = Color(0, 0, 0, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.2

[node name="Test" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_2lbcy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.21644, -0.845497, 0.488148, 0, 0.5, 0.866025, -0.976296, -0.187442, 0.10822, 0, 0, 0)
light_color = Color(0.980392, 0.858824, 0.588235, 1)
light_energy = 12.64
shadow_enabled = true
script = ExtResource("1_snt3v")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 6, 7.72724, 9)

[node name="Ball" type="MeshInstance3D" parent="."]
transform = Transform3D(5.795, 0, 0, 0, 5.795, 0, 0, 0, 5.795, 0, 6, 0)
mesh = SubResource("SphereMesh_bgycj")
surface_material_override/0 = SubResource("StandardMaterial3D_yi6xm")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 0
offset_right = 398.0
offset_bottom = 52.0
text = "10"
placeholder_text = "Light Speed: Default 10"
clear_button_enabled = true

[node name="low" type="Button" parent="Control"]
layout_mode = 0
offset_left = -1.0
offset_top = 53.0
offset_right = 118.0
offset_bottom = 106.0
text = "Low"

[node name="mid" type="Button" parent="Control"]
layout_mode = 0
offset_left = 118.0
offset_top = 53.0
offset_right = 243.0
offset_bottom = 106.0
text = "Mid"

[node name="hight" type="Button" parent="Control"]
layout_mode = 0
offset_left = 243.0
offset_top = 53.0
offset_right = 394.0
offset_bottom = 106.0
text = "High"

[node name="ref" type="Button" parent="Control"]
layout_mode = 0
offset_top = 108.0
offset_right = 397.0
offset_bottom = 164.0
text = "Reflection Probe: Off"

[node name="room" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="room"]
transform = Transform3D(24.38, 0, 0, 0, 1, 0, 0, 0, 25.662, 0, 0, 0)

[node name="CSGBox3D4" type="CSGBox3D" parent="room"]
transform = Transform3D(24.38, 0, 0, 0, 1, 0, 0, 0, 25.662, 0, 15, 0)

[node name="CSGBox3D2" type="CSGBox3D" parent="room"]
transform = Transform3D(-6.3941e-07, 1, 0, -14.628, -4.37114e-08, 0, 0, 0, 25.662, 12, 5.59593, 0)
size = Vector3(0.718262, 1, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="room"]
transform = Transform3D(-6.3941e-07, 1, 0, -14.628, -4.37114e-08, 0, 0, 0, 25.662, -12, 7.65656, 0)

[node name="CSGBox3D5" type="CSGBox3D" parent="room"]
transform = Transform3D(2.79495e-14, -4.37114e-08, 25.662, -14.628, -4.37114e-08, 0, 6.3941e-07, -1, -1.12172e-06, -5.24537e-07, 7.65656, -12)

[node name="CSGBox3D6" type="CSGBox3D" parent="room"]
transform = Transform3D(2.79495e-14, -4.37114e-08, 25.662, -14.628, -4.37114e-08, 0, 6.3941e-07, -1, -1.12172e-06, 5.24537e-07, 7.65656, 12)

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0179801, 6.02358, -0.0632334)
visible = false
size = Vector3(26, 25, 23.8625)
box_projection = true
interior = true
enable_shadows = true

[node name="Linux" type="MeshInstance3D" parent="."]
transform = Transform3D(4.14, 0, 0, 0, -3.67351e-07, -4.14, 0, 8.404, -1.80965e-07, -3.71721, 10.1818, -12.2653)
mesh = ExtResource("3_1arkc")
surface_material_override/0 = SubResource("StandardMaterial3D_7sm5d")

[connection signal="button_down" from="Control/low" to="DirectionalLight3D" method="_on_low_button_down"]
[connection signal="button_down" from="Control/mid" to="DirectionalLight3D" method="_on_mid_button_down"]
[connection signal="button_down" from="Control/hight" to="DirectionalLight3D" method="_on_hight_button_down"]
[connection signal="button_down" from="Control/ref" to="DirectionalLight3D" method="_on_ref_button_down"]
